fixed contact button to appear on Safari as designed

--- a/styles.css
+++ b/styles.css
@@ -569,6 +569,7 @@ input[type=submit]{
     font-size: 14px;
     width: 150px;
     padding: 15px 35px;
+    -webkit-appearance: none;
     background-color: #DC3E4A;
     border: none;
     border-radius: 5px;
@@ -932,6 +933,15 @@ input[type=submit]{
         width: 80%;
     }
     /* End Contact */
+    /* popUp */
+    .demo-pop-up{
+        width: 60%;
+    }
+    .demo-pop-up h1{
+        font-size: 20px;
+        line-height: 25px;
+    }
+    /* End popUp */
 
   }
   @media only screen and (max-width: 660px) {
@@ -957,6 +967,16 @@ input[type=submit]{
         padding: 10px 30px;
     }
     /* End freelance  */
+    /* popUp */
+    .demo-pop-up{
+        width: 80%;
+    }
+    .demo-pop-up h1{
+        font-size: 15px;
+        padding: 10px;
+        line-height: 35px;
+    }
+    /* End popUp */
   }
   @media only screen and (max-width: 390px) {
     /*  freelance  */
